# python-hashlib-gui

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/hash_calculation/: __init__.py  __main__.py  core.py  gui.py  main.py  tui.py
