[project]
name = "hash-calculation"
version = "0.0.1"
description = "Calculate file hashes super fast!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.3.0",
]

[project.scripts]
hashcalc = "hash_calculation.main:main"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyinstaller>=6.16.0",
]
